# cmake-showcase

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  addition.h  bld.sh  build.sh  cscript.txt  division.cpp  main.cpp  print_result.cpp  print_result.h
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: release.md
.github/workflows/: main.yml
math/: CMakeLists.txt  README.md  addition.cpp
math/include/: division.h
math/src/: addition.cpp  division.cpp
print/: CMakeLists.txt
print/src/: print_result.cpp
